collapse css almost fixed

--- a/src/style/components/footer.scss
+++ b/src/style/components/footer.scss
@@ -2,11 +2,12 @@
 @import '../mixins.scss';
 
 footer {
-  position: relative;
-  bottom: 0px;
-  left: 0px;
+  // position: relative;
+  // bottom: 0px !important;
+  // left: 0px !important;
   width: 100%;
   height: 209px;
+  margin-top: -3%;
   background-color: black;
 
   display: flex;
