--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -6,7 +6,7 @@
 @import 'components/footer';
 @import 'components/banner';
 @import 'components/locations__list.scss';
-@import 'components/collapsible.scss';
+@import 'components/collapse.scss';
 @import 'components/slideshow.scss';
 
 @import 'pages/accueil';
@@ -16,6 +16,7 @@
 
 #main{
     min-height: 100vh;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -24,7 +25,7 @@
     // overflow: hidden;
     @media screen and (max-width:768px) {
             margin: $main_margin--mobile;
-
+            height:100% ;
         
     }
 }
