--- a/src/style/pages/locations.scss
+++ b/src/style/pages/locations.scss
@@ -10,7 +10,6 @@
     width: 100%;
     grid-auto-rows: auto;
     grid-template-columns: 1fr;
-    grid-gap: 15px;
      
   }
 
